fixed logo size issue on small screens

--- a/style.css
+++ b/style.css
@@ -81,7 +81,13 @@ nav {
 
 /* Nav logó */
 .nav-logo { flex-shrink: 0; display: flex; align-items: center; height: 100%;}
-.nav-logo img { height: 45px; width: auto; position: relative; z-index: 1001; transition: opacity 0.25s ease; } 
+.nav-logo img {
+   height: clamp(28px, 5vw, 45px); 
+   width: auto; 
+   position: relative; 
+   z-index: 1001; 
+   transition: opacity 0.25s ease; 
+  } 
 /* Logika: alapértelmezett sötét móban el kell rejteni a világos logot. 
           váltásnál a sötét logo-t megjelenítjük és világos tűnik el */
 .nav-logo .logo-sotet  { display: none; }
@@ -174,6 +180,8 @@ nav {
   background: var(--hatter3);
   border: 1px solid var(--keret2);
   border-radius: var(--r);
+  position: relative;
+  z-index: 10000; 
 }
 .hamburger span {
   display: block; width: 17px; height: 2px;
@@ -701,6 +709,8 @@ footer {
   .nav-linkek { display: none; }
   .hamburger { display: flex !important;}
   .rolunk-racs { grid-template-columns: 1fr; gap: 2.5rem; }
+  .kepgaleria { width: 100%; overflow: hidden; }   
+  .slider-wrap { max-width: 100%; }                
   .kapcsolat-racs { grid-template-columns: 1fr; }
   .urlap-doboz { position: static; }
   .urlap-sor { grid-template-columns: 1fr; }
